Las entidades corregidas y funcionales.